--- a/Project(CRUDwithoutEF)/appsettings.json
+++ b/Project(CRUDwithoutEF)/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConStr": "Server=ASUS-YKWORLD-AC\\SQLEXPRESS;Database=BooksDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;",
+    "ConStr": "Server=LAPTOP-3FCGH7RU\\SQLEXPRESS;Database=BooksDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;",
     "Project_CRUDwithoutEF_Context": "Server=(localdb)\\mssqllocaldb;Database=Project_CRUDwithoutEFContext-a1dd02f2-7d1b-4716-abac-64af7cb3f361;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
